--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,7 @@
     <script src="scripts/states/party.js"></script>
     <!-- end party resources -->
     <!-- start settings -->
+    <script src="scripts/services/summary.js"></script>
     <script src="scripts/services/setting.js"></script>
     <script src="scripts/controllers/settings/index.js"></script>
     <script src="scripts/states/setting.js"></script>
