--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/oi.select/dist/select-tpls.min.js"></script>
+    <script src="bower_components/angular-mailto/angular-mailto.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -111,6 +112,7 @@
     <script src="scripts/controllers/auth/profile.js"></script>
     <!-- end common controllers -->
     <!-- directives -->
+    <script src="scripts/directives/ngenter.js"></script>
     <script src="scripts/directives/letteravatar.js"></script>
     <script src="scripts/directives/ng-gallery.js"></script>
     <!-- end directives -->
