--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ENV.title}} | {{ENV.description}}</title>
-    <meta name="description" content="{{ENV.description}}" />
-    <meta name="author" content="{{ENV.owner}}" />
+    <meta name="description" content="Citizen Feedback System" />
+    <meta name="author" content="DAWASCO" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -54,7 +54,6 @@
     <div class="app" ui-view></div>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -65,6 +64,7 @@
     <script src="bower_components/ng-notify/src/scripts/ng-notify.js"></script>
     <script src="bower_components/themify-icons/ie7/ie7.js"></script>
     <script src="bower_components/angucomplete-alt/angucomplete-alt.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/tether/dist/js/tether.js"></script>
     <script src="bower_components/angularPrint/angularPrint.js"></script>
     <script src="bower_components/jquery.nicescroll/jquery.nicescroll.js"></script>
