update statuses and priorities to use api refs

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,8 @@
     <!-- services -->
     <script src="scripts/services/utils.js"></script>
     <script src="scripts/services/permission.js"></script>
+    <script src="scripts/services/priority.js"></script>
+    <script src="scripts/services/status.js"></script>
     <!-- end services -->
     <!-- common controllers -->
     <script src="scripts/controllers/main.js"></script>
