--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
     <script src="scripts/services/permission.js"></script>
     <script src="scripts/services/priority.js"></script>
     <script src="scripts/services/status.js"></script>
+    <script src="scripts/services/comment.js"></script>
     <!-- end services -->
     <!-- common controllers -->
     <script src="scripts/controllers/main.js"></script>
