add show and hide if state directives

--- a/app/index.html
+++ b/app/index.html
@@ -115,6 +115,7 @@
     <script src="scripts/controllers/auth/profile.js"></script>
     <!-- end common controllers -->
     <!-- directives -->
+    <script src="scripts/directives/uistates.js"></script>
     <script src="scripts/directives/ngenter.js"></script>
     <script src="scripts/directives/letteravatar.js"></script>
     <script src="scripts/directives/ng-gallery.js"></script>
