--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/oi.select/dist/select.min.css" />
     <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
+    <link rel="stylesheet" href="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -93,6 +94,9 @@
     <script src="bower_components/oi.select/dist/select-tpls.min.js"></script>
     <script src="bower_components/angular-mailto/angular-mailto.js"></script>
     <script src="bower_components/angular-color-picker/angular-color-picker.js"></script>
+    <script src="bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
+    <script src="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
+    <script src="bower_components/ng-scrollbars/dist/scrollbars.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
