--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="bower_components/oi.select/dist/select.min.css" />
     <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -87,6 +88,7 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
+    <script src="bower_components/angularPrint/angularPrint.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
