clear unused files

--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,10 @@
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
     <script src="bower_components/angularPrint/angularPrint.js"></script>
+    <script src="bower_components/echarts/dist/echarts.js"></script>
+    <script src="bower_components/angular-echarts/dist/angular-echarts.js"></script>
+    <script src="bower_components/Chart.js/dist/Chart.js"></script>
+    <script src="bower_components/ng-chartjs/dist/angular-chartjs.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -174,6 +178,11 @@
     <script src="scripts/controllers/settings/index.js"></script>
     <script src="scripts/states/setting.js"></script>
     <!-- end settings -->
+
+    <!-- start dashboard -->
+        <script src="scripts/controllers/dashboards/overview.js"></script>
+    <!-- end dashboard -->
+
     <!-- endbuild -->
 </body>
 
