initial web socket intergration

--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,8 @@
     <script src="bower_components/angular-echarts/dist/angular-echarts.js"></script>
     <script src="bower_components/Chart.js/dist/Chart.js"></script>
     <script src="bower_components/ng-chartjs/dist/angular-chartjs.min.js"></script>
+    <script src="bower_components/angular-socket-io/socket.js"></script>
+    <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -103,6 +105,7 @@
     <!-- end states -->
     <!-- services -->
     <script src="scripts/services/utils.js"></script>
+    <script src="scripts/services/socket.js"></script>
     <script src="scripts/services/permission.js"></script>
     <script src="scripts/services/priority.js"></script>
     <script src="scripts/services/status.js"></script>
@@ -121,7 +124,6 @@
     <script src="scripts/directives/ngenter.js"></script>
     <script src="scripts/directives/letteravatar.js"></script>
     <!-- end directives -->
-    
     <!-- start servicerequest resources -->
     <script src="scripts/services/servicerequest.js"></script>
     <script src="scripts/controllers/servicerequests/create.js"></script>
@@ -178,12 +180,11 @@
     <script src="scripts/controllers/settings/index.js"></script>
     <script src="scripts/states/setting.js"></script>
     <!-- end settings -->
-
     <!-- start dashboard -->
-        <script src="scripts/controllers/dashboards/overview.js"></script>
+    <script src="scripts/controllers/dashboards/overview.js"></script>
     <!-- end dashboard -->
-
     <!-- endbuild -->
 </body>
+<toast></toast>
 
 </html>
