make email input autofocus if no input when go signin state

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
     <script src="bower_components/ng-chartjs/dist/angular-chartjs.min.js"></script>
     <script src="bower_components/angular-socket-io/socket.js"></script>
     <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+    <script src="bower_components/ng-focus-if/focusIf.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
