fix party role assignement

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
+    <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
