fix echart dependency loading

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
     <script src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <script src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
     <script src="bower_components/angularPrint/angularPrint.js"></script>
+    <script src="bower_components/echarts/dist/echarts.js"></script>
     <script src="bower_components/angular-echarts/dist/angular-echarts.js"></script>
     <script src="bower_components/angular-socket-io/socket.js"></script>
     <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
