--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap-daterangepicker/daterangepicker.css" />
     <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
     <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
+    <link rel="stylesheet" href="bower_components/ng-material-floating-button/mfb/dist/mfb.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -91,6 +92,7 @@
     <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
     <script src="bower_components/ng-focus-if/focusIf.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="bower_components/ng-material-floating-button/src/mfb-directive.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -178,6 +180,7 @@
     <!-- end settings -->
     <!-- start dashboard -->
     <script src="scripts/controllers/dashboards/overview.js"></script>
+    <script src="scripts/controllers/dashboards/standing.js"></script>
     <!-- end dashboard -->
     <!-- endbuild -->
 </body>
