--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
     <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
     <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
+    <link rel="stylesheet" href="bower_components/angular-pickadate/dist/angular-pickadate.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -82,6 +83,7 @@
     <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
     <script src="bower_components/ng-focus-if/focusIf.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-pickadate/dist/angular-pickadate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
