--- a/app/index.html
+++ b/app/index.html
@@ -14,15 +14,13 @@
     <link rel="stylesheet" href="bower_components/simple-line-icons/css/simple-line-icons.css" />
     <link rel="stylesheet" href="bower_components/ng-notify/src/styles/ng-notify.css" />
     <link rel="stylesheet" href="bower_components/themify-icons/css/themify-icons.css" />
-    <link rel="stylesheet" href="bower_components/themify-icons/ie7/ie7.css" />
     <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.css" />
     <link rel="stylesheet" href="bower_components/lato/css/lato.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
-    <link rel="stylesheet" href="bower_components/ui-listView/dist/ui-listView.css" />
     <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="bower_components/oi.select/dist/select.min.css" />
+    <link rel="stylesheet" href="bower_components/oi.select/dist/select.css" />
     <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
     <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
     <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
@@ -58,13 +56,11 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-notify/src/scripts/ng-notify.js"></script>
-    <script src="bower_components/themify-icons/ie7/ie7.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/tether/dist/js/tether.js"></script>
     <script src="bower_components/checklist-model/checklist-model.js"></script>
     <script src="bower_components/angular-prompt/dist/angular-prompt.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/ui-listView/dist/ui-listView.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <script src="bower_components/angular-jwt/dist/angular-jwt.js"></script>
     <script src="bower_components/ng-aa/dist/ng-aa.js"></script>
@@ -72,8 +68,7 @@
     <script src="bower_components/angular-elastic/elastic.js"></script>
     <script src="bower_components/ngToast/dist/ngToast.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-    <script src="bower_components/oi.select/dist/select-tpls.min.js"></script>
+    <script src="bower_components/oi.select/dist/select-tpls.js"></script>
     <script src="bower_components/angular-mailto/angular-mailto.js"></script>
     <script src="bower_components/angular-color-picker/angular-color-picker.js"></script>
     <script src="bower_components/angularPrint/angularPrint.js"></script>
@@ -100,8 +95,6 @@
     <script src="scripts/services/utils.js"></script>
     <script src="scripts/services/socket.js"></script>
     <script src="scripts/services/permission.js"></script>
-    <script src="scripts/services/priority.js"></script>
-    <script src="scripts/services/status.js"></script>
     <script src="scripts/services/comment.js"></script>
     <!-- end services -->
     <!-- common controllers -->
