add task to copy leaflet images on build

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
     <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
     <link rel="stylesheet" href="bower_components/angular-pickadate/dist/angular-pickadate.css" />
+    <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -78,6 +79,9 @@
     <script src="bower_components/ng-focus-if/focusIf.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angular-pickadate/dist/angular-pickadate.js"></script>
+    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
+    <script src="bower_components/ui-leaflet/dist/ui-leaflet.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
