--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,8 @@
     <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/ui-leaflet/dist/ui-leaflet.js"></script>
+    <script src="bower_components/numeral/numeral.js"></script>
+    <script src="bower_components/angular-numeraljs/dist/angular-numeraljs.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
