add first iteration for supervisor performance dashboard

--- a/app/index.html
+++ b/app/index.html
@@ -176,6 +176,7 @@
     <script src="scripts/controllers/dashboards/overview.js"></script>
     <script src="scripts/controllers/dashboards/standing.js"></script>
     <script src="scripts/controllers/dashboards/export.js"></script>
+    <script src="scripts/controllers/dashboards/performance.js"></script>
     <!-- end dashboard -->
     <!-- endbuild -->
 </body>
