--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
     <script src="scripts/directives/uistates.js"></script>
     <script src="scripts/directives/ngenter.js"></script>
     <script src="scripts/directives/letteravatar.js"></script>
+    <script src="scripts/directives/ng-gallery.js"></script>
     <!-- end directives -->
     <!-- start servicerequest resources -->
     <script src="scripts/services/servicerequest.js"></script>
