--- a/app/index.html
+++ b/app/index.html
@@ -122,6 +122,7 @@
     <script src="scripts/controllers/servicerequests/main.js"></script>
     <script src="scripts/controllers/servicerequests/show.js"></script>
     <script src="scripts/states/servicerequest.js"></script>
+    <script src="scripts/states/account.js"></script>
     <!-- end servicerequest resources -->
     <!-- start group resources -->
     <script src="scripts/services/servicegroup.js"></script>
