Implement customer account feature
- Add ability to lookup customer account details
- Add ability to add,verify,edit,remove account accessors
- Refactor codes for account feature

--- a/app/index.html
+++ b/app/index.html
@@ -115,15 +115,21 @@
     <script src="scripts/directives/letteravatar.js"></script>
     <script src="scripts/directives/ng-gallery.js"></script>
     <!-- end directives -->
-    <!-- start servicerequest resources -->
+    <!-- start service request resources -->
     <script src="scripts/services/servicerequest.js"></script>
     <script src="scripts/controllers/servicerequests/create.js"></script>
     <script src="scripts/controllers/servicerequests/index.js"></script>
     <script src="scripts/controllers/servicerequests/main.js"></script>
     <script src="scripts/controllers/servicerequests/show.js"></script>
     <script src="scripts/states/servicerequest.js"></script>
+    <!-- end service request resources -->
+    <!-- start account -->
+    <script src="scripts/services/account.js"></script>
+    <script src="scripts/controllers/account/index.js"></script>
+    <script src="scripts/controllers/account/accessors_index.js"></script>
+    <script src="scripts/controllers/account/accessors_create.js"></script>
     <script src="scripts/states/account.js"></script>
-    <!-- end servicerequest resources -->
+    <!-- end account -->
     <!-- start group resources -->
     <script src="scripts/services/servicegroup.js"></script>
     <script src="scripts/controllers/servicegroups/index.js"></script>
