Alert: Add alert interface

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,10 @@
     <script src="scripts/controllers/servicerequests/show.js"></script>
     <script src="scripts/states/servicerequest.js"></script>
     <!-- end service request resources -->
+    <!-- start alerts -->
+    <script src="scripts/controllers/alerts/main.js"></script>
+    <script src="scripts/states/alert.js"></script>
+    <!-- end alerts -->
     <!-- start account -->
     <script src="scripts/services/account.js"></script>
     <script src="scripts/controllers/account/index.js"></script>
