--- a/app/index.html
+++ b/app/index.html
@@ -124,6 +124,7 @@
     <script src="scripts/states/servicerequest.js"></script>
     <!-- end service request resources -->
     <!-- start alerts -->
+    <script src="scripts/services/alert.js"></script>
     <script src="scripts/controllers/alerts/main.js"></script>
     <script src="scripts/states/alert.js"></script>
     <!-- end alerts -->
