feat(resource): implement initial item crud ui

--- a/app/index.html
+++ b/app/index.html
@@ -216,6 +216,12 @@
     <script src="scripts/controllers/jurisdictions/show.js"></script>
     <script src="scripts/states/jurisdiction.js"></script>
     <!-- end jurisdiction resources -->
+    <!-- start item resources -->
+    <script src="scripts/services/item.js"></script>
+    <script src="scripts/controllers/items/index.js"></script>
+    <script src="scripts/controllers/items/show.js"></script>
+    <script src="scripts/states/item.js"></script>
+    <!-- end item resources -->
     <!-- start role resources -->
     <script src="scripts/services/role.js"></script>
     <script src="scripts/controllers/roles/index.js"></script>
