feat: implement zone manage ui

--- a/app/index.html
+++ b/app/index.html
@@ -222,6 +222,12 @@
     <script src="scripts/controllers/items/show.js"></script>
     <script src="scripts/states/item.js"></script>
     <!-- end item resources -->
+    <!-- start zone resources -->
+    <script src="scripts/services/zone.js"></script>
+    <script src="scripts/controllers/zones/index.js"></script>
+    <script src="scripts/controllers/zones/show.js"></script>
+    <script src="scripts/states/zone.js"></script>
+    <!-- end zone resources -->
     <!-- start role resources -->
     <script src="scripts/services/role.js"></script>
     <script src="scripts/controllers/roles/index.js"></script>
