--- a/app/index.html
+++ b/app/index.html
@@ -28,54 +28,21 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link
-      rel="stylesheet"
-      href="bower_components/angular-loading-bar/build/loading-bar.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/simple-line-icons/css/simple-line-icons.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/ng-notify/src/styles/ng-notify.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/themify-icons/css/themify-icons.css"
-    />
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
+    <link rel="stylesheet" href="bower_components/simple-line-icons/css/simple-line-icons.css" />
+    <link rel="stylesheet" href="bower_components/ng-notify/src/styles/ng-notify.css" />
+    <link rel="stylesheet" href="bower_components/themify-icons/css/themify-icons.css" />
     <link rel="stylesheet" href="bower_components/Ionicons/css/ionicons.css" />
     <link rel="stylesheet" href="bower_components/lato/css/lato.css" />
-    <link
-      rel="stylesheet"
-      href="bower_components/bootstrap/dist/css/bootstrap.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css"
-    />
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css" />
     <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
-    <link
-      rel="stylesheet"
-      href="bower_components/font-awesome/css/font-awesome.css"
-    />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/oi.select/dist/select.css" />
-    <link
-      rel="stylesheet"
-      href="bower_components/angular-color-picker/angular-color-picker.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/angularPrint/angularPrint.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/web-icons/css/web-icons.css"
-    />
-    <link
-      rel="stylesheet"
-      href="bower_components/angular-pickadate/dist/angular-pickadate.css"
-    />
+    <link rel="stylesheet" href="bower_components/angular-color-picker/angular-color-picker.css" />
+    <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
+    <link rel="stylesheet" href="bower_components/web-icons/css/web-icons.css" />
+    <link rel="stylesheet" href="bower_components/angular-pickadate/dist/angular-pickadate.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <!-- endbower -->
     <!-- endbuild -->
