chore(deps): add angular uploader

--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,7 @@
     <script src="bower_components/ui-leaflet/dist/ui-leaflet.js"></script>
     <script src="bower_components/numeral/numeral.js"></script>
     <script src="bower_components/angular-numeraljs/dist/angular-numeraljs.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
