--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,8 @@
     <script src="bower_components/numeral/numeral.js"></script>
     <script src="bower_components/angular-numeraljs/dist/angular-numeraljs.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/pretty-bytes/pretty-bytes.js"></script>
+    <script src="bower_components/angular-pretty-bytes/angular-pretty-bytes.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
