feat: add service type management ui

--- a/app/index.html
+++ b/app/index.html
@@ -157,12 +157,18 @@
     <script src="scripts/controllers/account/accessors_create.js"></script>
     <script src="scripts/states/account.js"></script>
     <!-- end account -->
-    <!-- start group resources -->
+    <!-- start service group resources -->
     <script src="scripts/services/servicegroup.js"></script>
     <script src="scripts/controllers/servicegroups/index.js"></script>
     <script src="scripts/controllers/servicegroups/show.js"></script>
     <script src="scripts/states/servicegroup.js"></script>
-    <!-- end group resources -->
+    <!-- end service group resources -->
+    <!-- start service type resources -->
+    <script src="scripts/services/servicetype.js"></script>
+    <script src="scripts/controllers/servicetypes/index.js"></script>
+    <script src="scripts/controllers/servicetypes/show.js"></script>
+    <script src="scripts/states/servicetype.js"></script>
+    <!-- end service type resources -->
     <!-- start service resources -->
     <script src="scripts/services/service.js"></script>
     <script src="scripts/controllers/services/index.js"></script>
