--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,7 @@
     <script src="scripts/services/socket.js"></script>
     <script src="scripts/services/permission.js"></script>
     <script src="scripts/services/comment.js"></script>
+    <script src="scripts/services/message.js"></script>
     <!-- end services -->
     <!-- common controllers -->
     <script src="scripts/controllers/main.js"></script>
