feat(trending): addd count per hour per day heatmap vis

--- a/app/index.html
+++ b/app/index.html
@@ -231,6 +231,7 @@
     <script src="scripts/controllers/dashboards/performance.js"></script>
     <script src="scripts/controllers/dashboards/operation.js"></script>
     <script src="scripts/controllers/dashboards/comparison.js"></script>
+    <script src="scripts/controllers/dashboards/trending.js"></script>
     <!-- end dashboard -->
     <!-- endbuild -->
   </body>
