feat(quality): add measure manage uis

--- a/app/index.html
+++ b/app/index.html
@@ -212,6 +212,12 @@
     <script src="scripts/controllers/qualitycauses/show.js"></script>
     <script src="scripts/states/qualitycause.js"></script>
     <!-- end qualitycause resources -->
+    <!-- start qualitymeasure resources -->
+    <script src="scripts/services/qualitymeasure.js"></script>
+    <script src="scripts/controllers/qualitymeasures/index.js"></script>
+    <script src="scripts/controllers/qualitymeasures/show.js"></script>
+    <script src="scripts/states/qualitymeasure.js"></script>
+    <!-- end qualitycause resources -->
     <!-- start party resources -->
     <script src="scripts/services/party.js"></script>
     <script src="scripts/controllers/parties/index.js"></script>
