feat(quality): add advisory manage uis

--- a/app/index.html
+++ b/app/index.html
@@ -218,6 +218,12 @@
     <script src="scripts/controllers/qualitymeasures/show.js"></script>
     <script src="scripts/states/qualitymeasure.js"></script>
     <!-- end qualitycause resources -->
+    <!-- start qualityadvisory resources -->
+    <script src="scripts/services/qualityadvisory.js"></script>
+    <script src="scripts/controllers/qualityadvisories/index.js"></script>
+    <script src="scripts/controllers/qualityadvisories/show.js"></script>
+    <script src="scripts/states/qualityadvisory.js"></script>
+    <!-- end qualitycause resources -->
     <!-- start party resources -->
     <script src="scripts/services/party.js"></script>
     <script src="scripts/controllers/parties/index.js"></script>
